--- a/fxs-platform-web/src/main/resources/templates/fragments/admin-nav-bar.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/admin-nav-bar.html
@@ -2,6 +2,11 @@
 	<section class="sidebar" style="height: auto;">
 		<ul class="sidebar-menu tree" data-widget="tree">
 			<li class="treeview">
+				<a th:href="@{/admin/cases}">
+					<span>待审核案件</span>
+				</a>
+			</li>
+			<li class="treeview">
 				<a th:href="@{/disputeInfo/getAllDisputeInfo}">
 					<span>纷争信息</span>
 				</a>
