--- a/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
+++ b/fxs-platform-web/src/main/resources/templates/lawyer_lawsuit_detail.html
@@ -140,7 +140,7 @@
 									<ul>
 										<li>
 											<span th:text="'第'+ ${iterState.count} + '次追问: '"></span>
-											<span th:text="${inquiry}"></span>
+											<span th:text="${inquiry[0]}"></span>
 										</li>
 									</ul>
 								</div>
