--- a/fxs-platform-web/src/main/resources/templates/fragments/admin-header.html
+++ b/fxs-platform-web/src/main/resources/templates/fragments/admin-header.html
@@ -7,6 +7,10 @@
 	<script th:src="@{/bootstrap/js/jquery3.2.1.min.js}"></script>
 	<script th:src="@{/bootstrap/js/popper.min.js}"></script>
 	<script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+	<!--
+	    <script th:src="@{/js/ui-choose.js}"></script>
+	    <link rel="stylesheet" type="text/css" th:href="@{css/ui-choose.css}"/>
+	-->
 </head>
 <header class="admin-header fixed-top d-flex align-items-center" th:fragment="admin-header">
 	<a href="/user/dashboard" class="logo mr-auto">
